# sherlock-code

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: describe_pr_prompt.md  diff_prompt.md  review_prompt.md  review_prompt_finish.md  review_system_prompt.md
src-tauri/src/: main.rs  reviewer.rs
styles/: styles.css
