[package]
name = "sherlock_code-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5.0-rc3", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
styled = "0.1.41"
stylist = "0.12.1"
leptos_meta = { version = "0.5.0-rc3", features = ["csr", "nightly"] }


[workspace]
members = ["src-tauri"]

[build-dependencies]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "release"


