[package]
name = "sherlock_code"
version = "0.0.1"
description = "AI Code reviewer"
authors = ["Rebecca Clair <rebecca@heliasar.com>"]
license = "MIT"
repository = "http://github.com/becksclair/sherlock-code"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.14"
copypasta = "0.8"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true

[profile.dev.package.ggml-sys]
opt-level = 3
